# rust-link-shortener-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2021-02-09-075011_links/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
