[package]
name = "rust-link-shortener"
version = "0.1.0"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
nanoid = "0.3.0"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0.123", features = ["derive"] }
url = "2.2.0"
